# tiny-c-complier

./: CMakeLists.txt  test_source
src/: catch_main.hpp  lexer.cpp  lexer.hpp  mainview.cpp  mainwindow.cpp  mainwindow.h
